--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -51,6 +51,8 @@ Admin:<%= @current_doctor.admin %>
 </div>
 <br>
 <%= link_to 'New Doctor', new_doctor_path, :class => "btn btn-success" %>
+<%= link_to 'Doctor Preferences', showpref_path, :class => "btn btn-success" %>
+
 <br>
 <p>
 
